--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -12,5 +12,11 @@
     await mermaid.run({querySelector:'code.language-mermaid'});
 </script>
 
+<!-- hitwebcounter Code START -->
+<div class="page__footer-hit-counter">
+  <a href="https://www.hitwebcounter.com/" target="_blank" rel="noopener noreferrer">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=21475200&style=0001&nbdigits=5&type=ip&initCount=700" title="Free Tools" alt="Free Tools" border="0" />
+  </a>
+</div>
 <!-- end custom footer snippets -->
 
